# lhat

./: .travis.yml  BUILD  LICENSE  README.md  WORKSPACE  ast.cc  ast.h  ast_test.cc  names.cc  names.h  names_test.cc  parser.cc  parser.h  parser_test.cc  printer.cc  printer.h  printer_test.cc  sub.cc  sub.h  sub_test.cc  vars.cc  vars.h  vars_test.cc
.github/workflows/: lhat.yaml
examples/: combinators
lhat/: BUILD  const_env.cc  const_env.h  const_env_test.cc  names.cc  names.h  names_test.cc  repl.cc
lhat/core/: BUILD  BUILD.bazel  line_transform_buf.h  line_transform_buf_test.cc  overloaded.h  parse.cc  parse.h  parse_test.cc
lhat/io/: BUILD.bazel  char_reader.cc  char_reader.h
lhat/named/: BUILD  BUILD.bazel  alpha.cc  alpha.h  alpha_test.cc  ast.cc  ast.h  ast_test.cc  equiv.cc  equiv.h  equiv_test.cc  parse.cc  parse.h  parse_test.cc  parser.cc  parser.h  parser_test.cc  printer.cc  printer.h  printer_test.cc  sub.cc  sub.h  sub_test.cc  vars.cc  vars.h  vars_test.cc
lhat/nameless/: BUILD  BUILD.bazel  ast.cc  ast.h  ast_test.cc  beta.cc  beta.h  beta_test.cc  eta.cc  eta.h  eta_test.cc  overloaded.h  parser.cc  parser.h  parser_test.cc  printer.cc  printer.h  printer_test.cc  reduce.cc  reduce.h  reduce_test.cc  shift.cc  shift.h  shift_test.cc  sub.cc  sub.h  sub_test.cc
lhat/repl/: BUILD  BUILD.bazel  const_env.cc  const_env.h  const_env_test.cc  main.cc  parse.cc  parse.h  parse_test.cc
lhat/transform/: BUILD.bazel  names.cc  names.h  names_test.cc  types.cc  types.h  types_test.cc
lhat/util/: BUILD.bazel  error.h  line_transform_buf.h  line_transform_buf_test.cc  overloaded.h  parse.cc  parse.h  parse_test.cc
named/: BUILD  parser.cc  parser.h  printer.h  printer_test.cc  sub.cc  sub.h  vars.cc  vars.h  vars_test.cc
nameless/: BUILD  ast.cc  ast_test.cc  parser.cc
script/travis/: test.sh
