cc_library(
    name = "const_env",
    srcs = [
        "const_env.cc",
    ],
    hdrs = [
        "const_env.h",
    ],
    deps = [
        "//lhat/util:error",
        "@absl//absl/strings",
    ],
)

cc_test(
    name = "const_env_test",
    srcs = [
        "const_env_test.cc",
    ],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        ":const_env",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)

cc_binary(
    name = "main",
    srcs = [
        "main.cc",
    ],
    deps = [
        ":const_env",
        ":parse",
        "//lhat/named:alpha",
        "//lhat/named:ast",
        "//lhat/nameless:ast",
        "//lhat/nameless:beta",
        "//lhat/transform:names",
        "//lhat/transform:types",
        "//lhat/util:line_transform_buf",
    ],
)

cc_library(
    name = "parse",
    srcs = [
        "parse.cc",
    ],
    hdrs = [
        "parse.h",
    ],
    deps = [
        "//lhat/util:error",
        "//lhat/util:parse",
    ],
)

cc_test(
    name = "parse_test",
    srcs = [
        "parse_test.cc",
    ],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        ":parse",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)
